tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldFail/syntax07/Test.java
public class Test {
	interface A {
		static void m() {
			String s = super.toString();
		}
	}
}